controllers/status/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bobr-status
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
spec:
  ports:
    - name: "web"
      port: 80
      targetPort: web # line 53
  selector:
    app: bobr-status
status:
  loadBalancer: {}
