controllers/status/networkpolicy.yaml
# https://ahmet.im/blog/kubernetes-network-policy/
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: bobr-status
spec:
  podSelector:
    matchLabels:
      app: bobr-status
  ingress: []
